# platform-container-runtime

./: .coverage-integration.xml  .coverage-unit.xml  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yaml  release-image.yml  release.yml  setup-automerge.yml  test.yaml  update-pre-commit.yml
charts/platform-container-runtime/: Chart.yaml  values-dev.yaml  values.yaml
charts/platform-container-runtime/templates/: _helpers.tpl  daemonset.yaml  externalSecret.yaml  secrets.yml
containerd/events/: container_pb2.py  content_pb2.py  image_pb2.py  namespace_pb2.py  snapshot_pb2.py  task_pb2.py
containerd/protobuf/plugin/: fieldpath_pb2.py
containerd/services/containers/v1/: containers_pb2.py  containers_pb2_grpc.py
containerd/services/content/v1/: content_pb2.py  content_pb2_grpc.py
containerd/services/diff/v1/: diff_pb2.py  diff_pb2_grpc.py
containerd/services/events/v1/: events_pb2.py  events_pb2_grpc.py
containerd/services/images/v1/: images_pb2.py  images_pb2_grpc.py
containerd/services/introspection/v1/: introspection_pb2.py  introspection_pb2_grpc.py
containerd/services/leases/v1/: leases_pb2.py  leases_pb2_grpc.py
containerd/services/namespaces/v1/: namespace_pb2.py  namespace_pb2_grpc.py
containerd/services/snapshots/v1/: snapshots_pb2.py  snapshots_pb2_grpc.py
containerd/services/tasks/v1/: tasks_pb2.py  tasks_pb2_grpc.py
containerd/services/ttrpc/events/v1/: events_pb2.py  events_pb2_grpc.py
containerd/services/version/v1/: version_pb2.py  version_pb2_grpc.py
containerd/types/: descriptor_pb2.py  metrics_pb2.py  mount_pb2.py  platform_pb2.py
containerd/types/task/: task_pb2.py
deploy/platform-container-runtime/: Chart.yaml  values-dev.yaml  values-template.yaml
deploy/platform-container-runtime/templates/: daemonset.yaml  deployment.yaml  ingress.yaml
github/com/gogo/protobuf/gogoproto/: gogo_pb2.py  gogo_pb2.pyi
k8s/io/cri_api/pkg/apis/runtime/v1/: api_pb2.py  api_pb2_grpc.py
k8s/io/cri_api/pkg/apis/runtime/v1alpha2/: api_pb2.py  api_pb2.pyi  api_pb2_grpc.py
platform_container_runtime/: api.py  config.py  config_factory.py  containerd_client.py  cri.py  cri_client.py  errors.py  kube_client.py  registry_client.py  runtime_client.py  service.py  utils.py
requirements/: dev.txt
scripts/: genpb2.sh
tests/: conftest.py
tests/integration/: conftest.py  conftest_kube.py  test_api.py  test_kube_client.py  test_service.py
tests/integration/docker/: docker-compose.yaml
tests/integration/k8s/: cri.yaml  platform-runtime.yaml  runtime.yaml
tests/unit/: test_config.py  test_service.py
