[metadata]
name = platform-container-runtime
description = Neu.ro platform container runtime
url = https://github.com/neuro-inc/platform-container-runtime
long_description = file: README.md, LICENSE
license = Apache 2
classifiers =
    License :: OSI Approved :: Apache 2
    Programming Language :: Python :: 3

[options]
zip_safe = False
python_requires = >=3.9
packages = find_namespace:
platforms = any
include_package_data = True
install_requires =
    aiohttp==3.8.4
    neuro-logging==21.12.2
    grpcio==1.55.0
    protobuf==4.21.12
    aiodocker==0.21.0
    docker-image-py==0.1.12

[options.entry_points]
console_scripts =
    platform-container-runtime = platform_container_runtime.api:main

[options.packages.find]
exclude =
    tests

[options.extras_require]
build-tools =
    grpcio-tools==1.55.0
dev =
    mypy==1.3.0
    mypy-protobuf==3.4.0
    pre-commit==3.3.2
    pytest==7.3.1
    pytest-asyncio==0.21.0
    pytest-cov==4.1.0
    types-protobuf

[flake8]
max-line-length = 88
ignore = N801,N802,N803,E252,W503,E133,E203,F541

[tool:pytest]
testpaths = tests
asyncio_mode = auto
filterwarnings =
    error
    ignore::DeprecationWarning:jose
    ignore:returning HTTPException object is deprecated:DeprecationWarning:aiohttp
    ignore:The loop argument is deprecated:DeprecationWarning:
markers =
    minikube

[coverage:run]
branch = True
source = platform_container_runtime

[mypy]
check_untyped_defs = True
disallow_any_generics = True
disallow_untyped_defs = True
follow_imports = silent
strict_optional = True
warn_redundant_casts = True
warn_unused_ignores = True

[mypy-github.*]
ignore_errors = true

[mypy-k8s.*]
ignore_errors = true

[mypy-containerd.*]
ignore_errors = true

[mypy-aiohttp_security]
ignore_missing_imports = true

[mypy-aiohttp_security.api]
ignore_missing_imports = true

[mypy-jose]
ignore_missing_imports = true

[mypy-neuro_auth_client.*]
ignore_missing_imports = true

[mypy-pytest]
ignore_missing_imports = true

[mypy-setuptools]
ignore_missing_imports = true

[mypy-trafaret]
ignore_missing_imports = true

[mypy-aiohttp_cors]
ignore_missing_imports = true

[mypy-aiohttp_apispec]
ignore_missing_imports = true

[mypy-yaml.*]
ignore_missing_imports = true

[mypy-grpc.*]
ignore_missing_imports = true

[mypy-aiodocker.*]
ignore_missing_imports = true

[mypy-docker_image.*]
ignore_missing_imports = true
